# void

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  PRD-ORCHESTRATION.md  PRD.md  README.md  RELEASING.md  STATUS.md  TESTING.md  ULTRATHINK.md  dist.toml  orchestration-communication.md  orchestration-prd.md  prompt-for-claude.txt  update_log.txt
.cargo/: config.toml  mingw-dlltool.cmd  mingw-linker.cmd
.github/: release.yml
.github/workflows/: ci.yml  release.yml
assets/: void.desktop
installer/: install.sh  void.nsi
src/: app.rs  main.rs  panel.rs  update.rs
src/application/: embed.rs  mod.rs  panel.rs  picker.rs  registry.rs
src/bus/: apc.rs  mod.rs  server.rs  task.rs  types.rs
src/canvas/: config.rs  edges.rs  grid.rs  layout.rs  minimap.rs  mod.rs  scene.rs  snap.rs  viewport.rs
src/command_palette/: commands.rs  fuzzy.rs  mod.rs
src/config/: defaults.rs  hot_reload.rs  mod.rs  schema.rs
src/deeplink/: ipc.rs  macos.rs  mod.rs  register.rs  toast.rs
src/kanban/: mod.rs
src/network/: mod.rs
src/orchestration/: mod.rs  prompt.rs  template.rs  worktree.rs
src/shortcuts/: default_bindings.rs  mod.rs
src/sidebar/: mod.rs  quick_actions.rs  session_list.rs  terminal_list.rs  workspace_list.rs
src/state/: mod.rs  panel_state.rs  persistence.rs  workspace.rs
src/terminal/: colors.rs  input.rs  mod.rs  panel.rs  pty.rs  renderer.rs  selection.rs
src/theme/: builtin.rs  colors.rs  fonts.rs  mod.rs
templates/: duo.toml  fullstack.toml  hedge-fund.toml  research.toml  trio.toml
wix/: main.wxs  shortcuts.wxs
(+3 files in other folders)
